# market-streaming-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: universe_equities.yaml
docker/redis/: redis.conf
notebooks/: 00_data_feeds.ipynb  01_analytics.ipynb
src/msp/backtesting/: base.py  ma_cross.py  runner.py
src/msp/config/: settings.py
src/msp/consumer/: redis_consumer.py
src/msp/execution/: broker.py  memory_broker.py
src/msp/features/: technical.py
src/msp/ingestion/: historical.py  streaming.py  universe.py
src/msp/signals/: signals.py
src/msp/storage/: parquet_storage.py  storage.py
tests/: conftest.py  helpers.py
tests/backtesting/: conftest.py  test_ma_cross.py  test_runner.py
tests/consumer/: conftest.py  test_redis_consumer.py
tests/execution/: conftest.py  test_memory_broker.py
tests/features/: conftest.py  test_technical.py
tests/ingestion/: conftest.py  test_historical.py  test_streaming.py  test_universe.py
tests/storage/: conftest.py  test_parquet_storage.py
